Fix text alignment in request type selection boxes

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -208,6 +208,10 @@
   margin-top: 1rem;
 }
 
+.req-type-row .req-type-box p {
+  margin-left: 2rem;
+}
+
 @media (min-width: 992px) {
   .req-type-row {
     display: -webkit-box;
