--- a/public_html/scss/_req-type.scss
+++ b/public_html/scss/_req-type.scss
@@ -16,6 +16,9 @@
     border-radius: 3px;
     padding: 20px 10px 10px 20px;
     margin-top: 1rem;
+    p {
+      margin-left: 2rem;
+    }
   }
 }
 
